<resources>
    <string name="app_name" translatable="false">My First App</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="button_add">Add</string>

    <!-- Menu actions-->
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_call">Call</string>
    <string name="action_share">Share</string>

    <!-- Sign in/Sign up -->
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="login_preference_file_key" translatable="false">moryta.com.br.myfirstapp.LOGIN_PREFERENCE_FILE_KEY</string>
    <string name="login_preference_stay_connected_key" translatable="false">stay_connected_flag</string>
    <string name="login_preference_email_key" translatable="false">email_key</string>
    <string name="login_preference_password_key" translatable="false">password_key</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="stay_connected">Stay connected</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Register</string>
    <string name="create_an_account">Create an account</string>

    <!-- Home -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_add_pet" translatable="false">+ Pet</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_pets">My pets</string>
    <string name="nav_events">Events</string>
    <string name="my_pet">My pet</string>

    <!-- About us -->
    <string name="about_us_author">Developed by Alessandro Moryta</string>

    <!-- My pet -->
    <string name="title_activity_register_pet">Register pet</string>
    <string name="hint_pet_type">My pet is a</string>
    <string name="hint_name">Name</string>
    <string name="hint_breed">Breed</string>
    <string name="hint_birth_date">Birth date</string>

    <!-- Pet types -->
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="other">Other</string>
    <string-array name="pet_type_array">
        <item>@string/dog</item>
        <item>@string/cat</item>
        <item>@string/other</item>
    </string-array>

    <!-- Events -->
    <string name="title_activity_register_event">Register event</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description (Optional)</string>
    <string name="hint_pet">Pet</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>

    <!-- Error messages -->
    <string name="error_message_email_password_required">Email and password cannot be empty</string>
    <string name="error_message_date_required">Date cannot be empty</string>
    <string name="error_message_invalid_sign_in">Invalid email or password</string>
    <string name="error_message_auth_failed">Authentication failed</string>
    <string name="error_message_loading_data">Error loadind data</string>
    <string name="error_message_action_call_canceled">Error while trying to make a call to contact: %s</string>

    <!-- Warning messages -->
    <string name="warning_message_operation_canceled">Operation canceled</string>
    <string name="warning_message_action_call_canceled">Please, allow app to make phone calls</string>

    <!-- Placeholders -->
    <string name="date_format" translatable="false">DD/MM/YYYY</string>
    <string name="time_format" translatable="false">hh:mm</string>

    <!-- Transitions -->
    <string name="transition_event_detail" translatable="false">TRANSITION_EVENT_DETAIL</string>
    <string name="transition_event_detail_title" translatable="false">TRANSITION_EVENT_DETAIL_TITLE</string>
    <string name="transition_event_detail_description" translatable="false">TRANSITION_EVENT_DETAIL_DESCRIPTION</string>
    <string name="transition_event_detail_date" translatable="false">TRANSITION_EVENT_DETAIL_DATE</string>

    <!-- Templates -->
    <string name="about_us_version_template">Version: %s</string>
    <string name="action_call_template" translatable="false">tel:%s</string>
</resources>
