<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="br.com.moryta.myfirstapp.pets.register.PetRegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPetBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_breed" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_birth_date" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPetBirthDate"
            style="@style/EditTextImitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="DD/MM/YYYY" />

        <ImageView
            android:id="@+id/ivPetBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/default_padding"
            android:src="@drawable/ic_today_primary_dark_24px" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnRegisterPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/button_add"
        android:textAllCaps="false" />

</LinearLayout>
