<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.moryta.myfirstapp.events.detail.EventDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/info_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:transitionName="@string/transition_event_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="vertical">


                <ViewSwitcher
                    android:id="@+id/vsEventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:transitionName="@string/transition_event_detail_title"
                        tools:text="Event title" />

                </ViewSwitcher>

                <TextView
                    android:id="@+id/tvEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:transitionName="@string/transition_event_detail_description"
                    tools:text="Event description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/ivEventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:src="@drawable/ic_today_black_24px" />

                        <TextView
                            android:id="@+id/tvEventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/ivEventDate"
                            android:layout_alignTop="@id/ivEventDate"
                            android:layout_marginLeft="@dimen/margin_half"
                            android:layout_toRightOf="@id/ivEventDate"
                            android:gravity="center"
                            tools:text="DD/MM/YYYY" />

                        <ImageView
                            android:id="@+id/ivEventAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/ivEventDate"
                            android:layout_alignParentLeft="true"
                            android:layout_alignRight="@id/ivEventDate"
                            android:layout_below="@id/ivEventDate"
                            android:layout_marginTop="@dimen/margin_half"
                            android:src="@drawable/ic_place_black_24dp" />

                        <TextView
                            android:id="@+id/tvEventStreet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/ivEventAddress"
                            android:layout_alignTop="@id/ivEventAddress"
                            android:layout_marginLeft="@dimen/margin_half"
                            android:layout_toRightOf="@id/ivEventAddress"
                            android:gravity="center"
                            tools:text="Street, number" />

                        <TextView
                            android:id="@+id/tvEventCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/tvEventStreet"
                            android:layout_alignRight="@id/tvEventStreet"
                            android:layout_below="@id/tvEventStreet"
                            tools:text="City, ST" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/ivEventTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_access_time_black_24dp" />

                        <TextView
                            android:id="@+id/tvEventTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/ivEventTime"
                            android:layout_alignTop="@id/ivEventTime"
                            android:layout_marginLeft="@dimen/margin_half"
                            android:layout_toRightOf="@id/ivEventTime"
                            android:gravity="center"
                            tools:text="hh:mm" />

                        <ImageView
                            android:id="@+id/ivEventContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/ivEventTime"
                            android:layout_alignRight="@id/ivEventTime"
                            android:layout_below="@id/ivEventTime"
                            android:layout_marginTop="@dimen/margin_half"
                            android:src="@drawable/ic_phone_black_24dp" />

                        <TextView
                            android:id="@+id/tvEventContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/ivEventContact"
                            android:layout_alignTop="@id/ivEventContact"
                            android:layout_marginLeft="@dimen/margin_half"
                            android:layout_toRightOf="@id/ivEventContact"
                            tools:text="(11) 11111-1111" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/map_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/info_section"
            android:layout_weight="0.6">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_phone_white_24dp"
        app:layout_anchor="@id/info_section"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
